Prevent features with options from taking up too much space
Refs #14

Still not a complete solution since it's still quite slow....

--- a/less/site.less
+++ b/less/site.less
@@ -37,6 +37,12 @@ a {
     cursor: pointer;
 }
 
+.box-shadow(@args) {
+    -moz-box-shadow: @args;
+    -webkit-box-shadow: @args;
+    box-shadow: @args;
+}
+
 //
 // Overlays
 //
@@ -130,9 +136,25 @@ a {
     }
 }
 
+.class-section {
+    padding-bottom: 3em;
+}
+
 .feature-options {
+    &.scrollable {
+        height: 280px;
+        overflow-y: scroll;
+        .box-shadow(inset 0 -8px 12px -4px fade(#333, 50%));
+
+        .feature-option {
+            margin: 8px;
+        }
+    }
+
     .feature-option {
         .clickable();
+
+        padding: 4px;
 
         &.active {
             cursor: default;
